content/_generated-doc/3.6/config/quarkus-s2i-s2i-config.adoc

:summaryTableId: quarkus-s2i-s2i-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-s2i-s2i-config_configuration]]link:#quarkus-s2i-s2i-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.build-strategy]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.build-strategy[quarkus.s2i.build-strategy]`


[.description]
--
The build config strategy to use.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_BUILD_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_BUILD_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
`binary`, `docker` 
|`binary`


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.base-jvm-image]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.base-jvm-image[quarkus.s2i.base-jvm-image]`


[.description]
--
The base image to be used when a container image is being produced for the jar build. When the application is built against Java 17 or higher, `registry.access.redhat.com/ubi8/openjdk-17:1.18` is used as the default. Otherwise `registry.access.redhat.com/ubi8/openjdk-11:1.18` is used as the default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_BASE_JVM_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_BASE_JVM_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.base-native-image]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.base-native-image[quarkus.s2i.base-native-image]`


[.description]
--
The base image to be used when a container image is being produced for the native binary build

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_BASE_NATIVE_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_BASE_NATIVE_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quay.io/quarkus/ubi-quarkus-native-binary-s2i:2.0`


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.jvm-arguments]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.jvm-arguments[quarkus.s2i.jvm-arguments]`


[.description]
--
The JVM arguments to pass to the JVM when starting the application

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_JVM_ARGUMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_JVM_ARGUMENTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.native-arguments]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.native-arguments[quarkus.s2i.native-arguments]`


[.description]
--
Additional arguments to pass when starting the native application

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_NATIVE_ARGUMENTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_NATIVE_ARGUMENTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.jar-directory]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.jar-directory[quarkus.s2i.jar-directory]`


[.description]
--
The directory where the jar is added during the assemble phase. This is dependent on the S2I image and should be supplied if a non default image is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_JAR_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_JAR_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/deployments/target/`


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.jar-file-name]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.jar-file-name[quarkus.s2i.jar-file-name]`


[.description]
--
The resulting filename of the jar in the S2I image. This option may be used if the selected S2I image uses a fixed name for the jar.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_JAR_FILE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_JAR_FILE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.native-binary-directory]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.native-binary-directory[quarkus.s2i.native-binary-directory]`


[.description]
--
The directory where the native binary is added during the assemble phase. This is dependent on the S2I image and should be supplied if a non-default image is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_NATIVE_BINARY_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_NATIVE_BINARY_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/home/quarkus/`


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.native-binary-file-name]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.native-binary-file-name[quarkus.s2i.native-binary-file-name]`


[.description]
--
The resulting filename of the native binary in the S2I image. This option may be used if the selected S2I image uses a fixed name for the native binary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_NATIVE_BINARY_FILE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_NATIVE_BINARY_FILE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-s2i-s2i-config_quarkus.s2i.build-timeout]]`link:#quarkus-s2i-s2i-config_quarkus.s2i.build-timeout[quarkus.s2i.build-timeout]`


[.description]
--
The build timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_S2I_BUILD_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_S2I_BUILD_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`PT5M`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
